--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Ahmad Aidil <ahmdaidil@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@koa/cors": "2",
     "dotenv": "^6.0.0",
     "koa": "^2.5.3",
     "tus-node-server": "^0.3.2"
